[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/main/enemys/ground/GroundEnemy1.gd" type="Script" id=1]
[ext_resource path="res://assets/main/enemys/ground/slime_0_walkAnimationSheet.png" type="Texture" id=2]
[ext_resource path="res://assets/main/sounds/pits_enemyhit.wav" type="AudioStream" id=3]

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "walking",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 17.5, 22 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 23.5, 22 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 20.5, 22 )

[node name="GroundEnemy1" type="KinematicBody2D"]
scale = Vector2( 0.2, 0.2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="ShellDrop" type="Position2D" parent="."]
position = Vector2( -9, -9 )
scale = Vector2( 2, 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 3, 3 )
frames = SubResource( 1 )
animation = "walking"
frame = 3
playing = true

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="."]
position = Vector2( -4.5, 2 )
shape = SubResource( 4 )

[node name="FloorChecker" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 25 )
collision_mask = 2

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 2048

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2( -0.5, 0 )
shape = SubResource( 3 )

[node name="BulletDetector" type="Area2D" parent="."]
collision_layer = 2048
collision_mask = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="BulletDetector"]
position = Vector2( -2.5, 0 )
shape = SubResource( 2 )

[node name="EnemyHitSound" type="AudioStreamPlayer" parent="BulletDetector"]
stream = ExtResource( 3 )
volume_db = -30.0

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="area_entered" from="BulletDetector" to="." method="_on_BulletDetector_area_entered"]
